--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
-    "name": "digipolisgent/symfony_bundle_domainator9k-apptype-generic",
+    "name": "digipolisgent/domainator9k-apptype-generic-bundle",
     "type": "symfony-bundle",
-    "description": "digipolisgent/symfony_bundle_domainator9k-apptype-generic",
+    "description": "",
     "license": "MIT",
     "authors": [],
     "support": {},
