Fix autoload namespace

--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
   },
   "autoload": {
     "psr-4": {
-      "DigipolisGent\\Domainator9k\\AppTypes\\GenericBundle\\": ""
+      "DigipolisGent\\Domainator9k\\AppTypes\\GenericBundle\\": "src"
     }
   }
 }
